@@ -1,30 +1,29 @@
 package de.uni_hamburg.corpora;
 
-import static de.uni_hamburg.corpora.utilities.PrettyPrinter.indent;
+import de.uni_hamburg.corpora.utilities.PrettyPrinter;
 import de.uni_hamburg.corpora.utilities.TypeConverter;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import static java.lang.System.out;
-import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.DirectoryStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Set;
-import java.util.Stack;
 import java.util.TimeZone;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
+import javax.xml.transform.TransformerException;
+import javax.xml.xpath.XPathExpressionException;
 import org.exmaralda.partitureditor.jexmaralda.JexmaraldaException;
 import org.jdom.Document;
 import org.jdom.JDOMException;
-import org.jdom.input.SAXBuilder;
 import org.jdom.output.XMLOutputter;
 import org.xml.sax.SAXException;
 
@@ -35,36 +34,33 @@ import org.xml.sax.SAXException;
  */
 public class CorpusIO {
 
-    public CorpusIO() {
-    }
-
-    //The content in here probably has not much to do with what we decided in UML now,
-    //need to be reworked
     //that's the local filepath or repository url
     URL url;
-    Collection<CorpusData> cdc;
+    Collection<CorpusData> cdc = new ArrayList();
+    Collection<URL> recursed = new ArrayList();
+    Collection<URL> alldata = new ArrayList();
+    Collection<Class<? extends CorpusData>> allCorpusDataTypes = new ArrayList();
+    BasicTranscriptionData bt = new BasicTranscriptionData();
+    ComaData coma = new ComaData();
+    AnnotationSpecification asp = new AnnotationSpecification();
+    CmdiData cmdidata = new CmdiData();
+    UnspecifiedXMLData usdata = new UnspecifiedXMLData();
+    SegmentedTranscriptionData segdata = new SegmentedTranscriptionData();
 
-    public String CorpusData2String(CorpusData cd) {
+    public CorpusIO() {
+        allCorpusDataTypes.add(bt.getClass());
+        allCorpusDataTypes.add(coma.getClass());
+        allCorpusDataTypes.add(asp.getClass());
+        allCorpusDataTypes.add(cmdidata.getClass());
+        allCorpusDataTypes.add(usdata.getClass());
+        allCorpusDataTypes.add(segdata.getClass());
+    }
+        
+    public String CorpusData2String(CorpusData cd) throws TransformerException, ParserConfigurationException, SAXException, IOException, XPathExpressionException {
         return cd.toSaveableString();
     }
 
-
-    /*
-     * The following methods need to be in the Iterators for Coma and CMDI that don't exist yet
-     *
-
-     public abstract Collection getAllTranscripts();
-
-     public abstract Collection getAllAudioFiles();
-
-     public abstract Collection getAllVideoFiles();
-
-     public abstract String getAudioLinkForTranscript();
-
-     public abstract String getVideoLinkForTranscript();
-
-     */
-    public void write(CorpusData cd, URL url) throws IOException {
+    public void write(CorpusData cd, URL url) throws TransformerException, ParserConfigurationException, SAXException, IOException, XPathExpressionException {
         write(cd.toSaveableString(), cd.getURL());
     }
 
@@ -79,10 +75,18 @@ public class CorpusIO {
         System.out.println("Document written...");
     }
 
-    public void write(Document doc, URL url) throws IOException {
+    public void write(Document doc, URL url) throws IOException, TransformerException, ParserConfigurationException, ParserConfigurationException, UnsupportedEncodingException, UnsupportedEncodingException, SAXException, XPathExpressionException {
         XMLOutputter xmOut = new XMLOutputter();
         String unformattedCorpusData = xmOut.outputString(doc);
-        String prettyCorpusData = indent(unformattedCorpusData, "event");
+        PrettyPrinter pp = new PrettyPrinter();
+        String prettyCorpusData = pp.indent(unformattedCorpusData, "event");
+        write(prettyCorpusData, url);
+    }
+    
+    public void write(org.w3c.dom.Document doc, URL url) throws IOException, TransformerException, ParserConfigurationException, ParserConfigurationException, UnsupportedEncodingException, UnsupportedEncodingException, SAXException, XPathExpressionException {
+        String unformattedCorpusData = TypeConverter.W3cDocument2String(doc);
+        PrettyPrinter pp = new PrettyPrinter();
+        String prettyCorpusData = pp.indent(unformattedCorpusData, "event");
         write(prettyCorpusData, url);
     }
 
@@ -95,31 +99,79 @@ public class CorpusIO {
     }
 
     public void write(Collection<CorpusData> cdc, URL url) {
-
+        //TODO
     }
 
-    //TODO
-    public CorpusData readFile(URL url) {
-        if (url.getPath().endsWith("exb")) {
-            BasicTranscriptionData bt = new BasicTranscriptionData(url);
-            //bt.loadFile(f);
-            return bt;
-        } else if (url.getPath().endsWith("coma")) {
+        /*
+     * The following methods need to be in the Iterators for Coma and CMDI that don't exist yet
+     *
+
+     public abstract Collection getAllTranscripts();
+
+     public abstract Collection getAllAudioFiles();
+
+     public abstract Collection getAllVideoFiles();
+
+     public abstract String getAudioLinkForTranscript();
+
+     public abstract String getVideoLinkForTranscript();
+
+     */
+    
+    //read a single file as a corpus data object from an url
+    //only read it if it is needed
+    public CorpusData readFileURL(URL url, Collection<Class<? extends CorpusData>> clcds) throws SAXException, JexmaraldaException, ClassNotFoundException{
+        if (url.getPath().endsWith("exb") && clcds.contains(bt.getClass())) {
+            BasicTranscriptionData btd = new BasicTranscriptionData(url);
+            return btd;
+        } else if (url.getPath().toLowerCase().endsWith("coma") && clcds.contains(coma.getClass())) {
             ComaData cm = new ComaData(url);
-            //TODO
             return cm;
-        } else if (url.getPath().endsWith("exs") || url.getPath().endsWith("xml")) {
+        } else if (url.getPath().toLowerCase().endsWith("xml") && ((url.getPath().toLowerCase().contains("Annotation"))) && clcds.contains(asp.getClass())) {
+            AnnotationSpecification as = new AnnotationSpecification(url);
+            return as;
+        } else if ((url.getPath().toLowerCase().endsWith("xml") && url.getPath().toLowerCase().contains("cmdi")) && clcds.contains(cmdidata.getClass()) || url.getPath().toLowerCase().endsWith("cmdi") && clcds.contains(cmdidata.getClass())) {
+            CmdiData cmdi = new CmdiData(url);
+            return cmdi;
+        } else if (url.getPath().toLowerCase().endsWith("xml") && clcds.contains(usdata.getClass())) {
             UnspecifiedXMLData usd = new UnspecifiedXMLData(url);
             return usd;
-            //we can't read files other than coma and exb yet...
-            /*  } else if (f.getName().endsWith("cmdi")) {
-             CmdiData cmdi = new CmdiData(f.toURI().toURL());
-            return cmdi; */
+        } else if (url.getPath().toLowerCase().endsWith("exs") && clcds.contains(segdata.getClass())) {
+            SegmentedTranscriptionData seg = new SegmentedTranscriptionData(url);
+            return seg;
         } else {
-            System.out.println(url + " is not xml CorpusData");
+            System.out.println(url + " will not be read");
             CorpusData cd = null;
             return cd;
         }
+    }
+            
+    //read a single file as a corpus data object from an url
+    public CorpusData readFileURL(URL url) throws SAXException, JexmaraldaException, ClassNotFoundException {
+       return readFileURL(url, allCorpusDataTypes);
+    }
+
+    //read all the files as corpus data objects from a directory url
+    public Collection<CorpusData> read(URL url) throws URISyntaxException, IOException, SAXException, JexmaraldaException, ClassNotFoundException {
+        alldata = URLtoList(url);
+        for (URL readurl : alldata) {
+            CorpusData cdread = readFileURL(readurl);
+            cdc.add(cdread);
+        }
+        return cdc;
+    }
+    
+    //read only the files as corpus data objects from a directory url that are specified in the Collection
+    public Collection<CorpusData> read(URL url, Collection<Class<? extends CorpusData>> chosencdc) throws URISyntaxException, IOException, SAXException, JexmaraldaException, ClassNotFoundException {
+        //To do
+        alldata = URLtoList(url);
+        for (URL readurl : alldata) {
+            CorpusData cdread = readFileURL(readurl);
+            if(cdread!=null &&!cdc.contains(cdread)){
+            cdc.add(cdread);
+            }
+        }
+        return cdc;
     }
 
     public String readInternalResourceAsString(String path2resource) throws JDOMException, IOException {
@@ -130,76 +182,27 @@ public class CorpusIO {
         }
         return xslstring;
     }
-
-    //TODO
-    public CorpusData toCorpusData(File f) throws MalformedURLException, SAXException, JexmaraldaException {
-        //at some point we will need to use correct mimetypes here....
-        if (f.getName().endsWith("exb")) {
-            BasicTranscriptionData bt = new BasicTranscriptionData(f.toURI().toURL());
-            //bt.loadFile(f);
-            return bt;
-        } else if (f.getName().endsWith("coma")) {
-            ComaData cm = new ComaData(f.toURI().toURL());
-            //TODO
-            return cm;
-        } else if (f.getName().endsWith("xml") && ((f.getName().contains("Annotation") || f.getName().contains("annotation")))) {
-            AnnotationSpecification as = new AnnotationSpecification(f.toURI().toURL());
-            return as;
-        } else if ((f.getName().endsWith("xml") && f.getName().contains("cmdi")) || f.getName().endsWith("cmdi")) {
-            CmdiData cmdi = new CmdiData(f.toURI().toURL());
-            return cmdi;
-        } else if (f.getName().endsWith("xml")) {
-            UnspecifiedXMLData usd = new UnspecifiedXMLData(f.toURI().toURL());
-            return usd;
-        } else if (f.getName().endsWith("exs")) {
-            SegmentedTranscriptionData setd = new SegmentedTranscriptionData(f.toURI().toURL());
-            return setd;
-        } else {
-            System.out.println(f.getName() + " is not xml CorpusData");
-            CorpusData cd = null;
-            return cd;
+    
+    public String readExternalResourceAsString(String path2resource) throws JDOMException, IOException, URISyntaxException {
+        String xslstring = new String(Files.readAllBytes(Paths.get(new URL(path2resource).toURI())));
+        System.out.println(path2resource);
+        if (xslstring == null) {
+            throw new IOException("File not found!");
         }
+        return xslstring;
     }
 
-    //TODO
-    public Collection<File> getFileURLSRecursively(URL directoryURL) {
-        Set<String> recursionBlackList = new HashSet<String>();
-        recursionBlackList.add(".git");
-        recursionBlackList.add(".gitignore");
-        Set<File> recursed = new HashSet<File>();
-        Stack<File> dirs = new Stack();
-        File d = new File(directoryURL.getFile());
-        dirs.add(d);
-        while (!dirs.empty()) {
-            File[] files = dirs.pop().listFiles();
-            for (File f : files) {
-                if (recursionBlackList.contains(f.getName())) {
-                    continue;
-                } else if (f.isDirectory()) {
-                    dirs.add(f);
-                } else {
-                    recursed.add(f);
-                }
-            }
-        }
-        return recursed;
-    }
-
-    public ArrayList<URL> URLtoList(URL url) {
-        ArrayList<URL> alldata = new ArrayList();
+    public Collection<URL> URLtoList(URL url) throws URISyntaxException, IOException {
         if (isLocalFile(url)) {
             //if the url points to a directory
-            if (new File(url.getFile()).isDirectory()) {
-                //we need to iterate
+            if (isDirectory(url)) {
+                //we need to iterate    
                 //and add everything to the list
-                Collection<File> recursed = getFileURLSRecursively(url);
-                for (File f : recursed) {
-                    if (!f.isDirectory()) {
-                        try {
-                            alldata.add(f.toURI().toURL());
-                        } catch (MalformedURLException ex) {
-                            Logger.getLogger(CorpusIO.class.getName()).log(Level.SEVERE, null, ex);
-                        }
+                Path path = Paths.get(url.toURI());
+                listFiles(path);
+                for (URL urlread : recursed) {
+                    if (!isDirectory(urlread)) {
+                        alldata.add(urlread);
                     }
                 }
                 return alldata;
@@ -211,44 +214,7 @@ public class CorpusIO {
             }
         } else {
             //it's a datastream in the repo
-            //TODO later
-            return null;
-        }
-    }
-
-    public Collection<CorpusData> read(URL url) throws MalformedURLException, SAXException, SAXException, JexmaraldaException {
-        Collection<CorpusData> cdc = new ArrayList();
-        ArrayList<CorpusData> acdc;
-        acdc = (ArrayList) cdc;
-        if (isLocalFile(url)) {
-            //if the url points to a directory
-            if (new File(url.getFile()).isDirectory()) {
-                //we need to iterate
-                //and add everything to the cdc list
-                Collection<File> recursed = getFileURLSRecursively(url);
-                for (File f : recursed) {
-                    CorpusData cd = toCorpusData(f);
-                    if (cd != null) {
-                        acdc.add(toCorpusData(f));
-                    }
-                }
-                cdc = (Collection) acdc;
-                return cdc;
-            } //if the url points to a file
-            else {
-                //we need to read this file as some implementation of corpusdata
-                File f = new File(url.getFile());
-                CorpusData cd = toCorpusData(f);
-                if (cd != null) {
-                    acdc.add(toCorpusData(f));
-                }
-                cdc = (Collection) acdc;
-                return cdc;
-
-            }
-        } else {
-            //it's a datastream in the repo
-            //TODO later
+            //TODO later          
             return null;
         }
     }
@@ -261,16 +227,39 @@ public class CorpusIO {
         return "file".equalsIgnoreCase(scheme) && !hasHost(url);
     }
 
+    /**
+     * Whether the URL is a directory in the local file system.
+     */
+    public static boolean isDirectory(java.net.URL url) throws URISyntaxException {
+        //return new File(url.toURI()).isDirectory();
+        return Files.isDirectory(Paths.get(url.toURI()));
+    }
+
     public static boolean hasHost(java.net.URL url) {
         String host = url.getHost();
         return host != null && !"".equals(host);
     }
 
-    public void writePrettyPrinted(CorpusData cd, URL url) throws IOException {
+    public void writePrettyPrinted(CorpusData cd, URL url) throws TransformerException, ParserConfigurationException, SAXException, IOException, XPathExpressionException {
         write(cd.toSaveableString(), cd.getURL());
     }
 
     public void zipThings() {
 
+    }
+    
+
+    void listFiles(Path path) throws IOException {
+        try (DirectoryStream<Path> stream = Files.newDirectoryStream(path)) {
+            for (Path entry : stream) {
+                if (Files.isDirectory(entry)) {
+                    listFiles(entry);
+                }
+                String sentry = entry.getFileName().toString().toLowerCase();
+                if (sentry.endsWith(".exb") || sentry.endsWith(".exs") || sentry.endsWith(".coma") || sentry.endsWith(".xml") || sentry.endsWith(".cmdi") || sentry.endsWith(".eaf") || sentry.endsWith(".flextext") || sentry.endsWith(".esa") || sentry.endsWith(".tei") || sentry.endsWith(".xsl")) {
+                    recursed.add(entry.toUri().toURL());
+                }
+            }
+        }
     }
 }
