@@ -5,15 +5,6 @@
  */
 package de.uni_hamburg.corpora.validation;
 
-import de.uni_hamburg.corpora.CorpusData;
-import de.uni_hamburg.corpora.CorpusFunction;
-import de.uni_hamburg.corpora.Report;
-import java.io.IOException;
-import java.util.Collection;
-import java.util.logging.Level;
-import org.exmaralda.partitureditor.jexmaralda.JexmaraldaException;
-import org.jdom.JDOMException;
-import org.xml.sax.SAXException;
 import de.uni_hamburg.corpora.Corpus;
 import de.uni_hamburg.corpora.CorpusData;
 import de.uni_hamburg.corpora.CorpusFunction;
@@ -21,19 +12,14 @@ import de.uni_hamburg.corpora.CorpusIO;
 import de.uni_hamburg.corpora.Report;
 import de.uni_hamburg.corpora.utilities.TypeConverter;
 import de.uni_hamburg.corpora.utilities.XSLTransformer;
-import de.uni_hamburg.corpora.visualization.ListHTML;
-import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
-import java.util.Scanner;
+import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.transform.TransformerConfigurationException;
 import javax.xml.transform.TransformerException;
+import javax.xml.xpath.XPathExpressionException;
 import org.exmaralda.partitureditor.jexmaralda.JexmaraldaException;
 import org.jdom.JDOMException;
 import org.xml.sax.SAXException;
@@ -41,81 +27,58 @@ import org.xml.sax.SAXException;
 /**
  *
  * @author fsnv625
+ * 
+ * This class creates a sort- and filterable html overview in table form 
+ * of the content of the coma file to make error checking and harmonizing easier.
  */
 public class ComaOverviewGeneration extends Checker implements CorpusFunction {
 
-    final String COMA_OVERVIEW = "coma-overview";
+    boolean inel = false;
+
+    public ComaOverviewGeneration() {
+        super("ComaOverviewGeneration");
+    }
 
     @Override
     public Report check(CorpusData cd){
         Report r = new Report();
-        
+        String xsl;
         try{
 
             // get the XSLT stylesheet
-            String xsl = TypeConverter.InputStream2String(getClass().getResourceAsStream("/xsl/Output_metadata_summary.xsl"));
-
+            if(inel){
+            xsl = TypeConverter.InputStream2String(getClass().getResourceAsStream("/xsl/Output_metadata_summary_INEL.xsl"));    
+            }else {
+            xsl = TypeConverter.InputStream2String(getClass().getResourceAsStream("/xsl/Output_metadata_summary.xsl"));
+            }
             // create XSLTransformer and set the parameters 
             XSLTransformer xt = new XSLTransformer();
         
             // perform XSLT transformation
             String result = xt.transform(cd.toSaveableString(), xsl);
-            Path path = Paths.get(cd.getURL().toURI()); 
-            Path pathwithoutfilename = path.getParent();
-            URI overviewuri = pathwithoutfilename.toUri();
-            URL overviewurl1 = overviewuri.toURL();
-            System.out.println(overviewurl1);
-            //TODO systemindependent!!
-            URL overviewurl = new URL(overviewurl1, "coma_overview.html");
+            //get location to save new result
+            URL overviewurl = new URL(cd.getParentURL(), "curation/coma_overview.html");
             CorpusIO cio = new CorpusIO();
+            //save it
             cio.write(result, overviewurl);
+            //everything worked
+            r.addCorrect(function, cd, "created html overview at " + overviewurl);
             
-            r.addCorrect(COMA_OVERVIEW, cd, "created html overview at " + overviewurl);
-            
-            
-//            //read lines and add to Report
-//            Scanner scanner = new Scanner(result);
-//            
-//            int i = 1;
-//            while (scanner.hasNextLine()) {
-//                String line = scanner.nextLine();
-//                
-//                //split line by ;
-//                String[] lineParts = line.split(";");
-//                
-//                switch (lineParts[0].toUpperCase()) {
-//                    case "WARNING":
-//                        r.addWarning("XSLTChecker", cd.getURL().getFile() + ": " + lineParts[1]);
-//                        break;
-//                    case "CRITICAL":
-//                        r.addCritical("XSLTChecker", cd.getURL().getFile() + ": " + lineParts[1]);
-//                        break;
-//                    case "NOTE":                    
-//                        r.addNote("XSLTChecker", cd.getURL().getFile() + ": " + lineParts[1]);
-//                        break;
-//                    case "MISSING": 
-//                        r.addMissing("XSLTChecker", cd.getURL().getFile() + ": " + lineParts[1]);
-//                        break;
-//                    default:
-//                        r.addCritical("XSLTChecker", "(Unrecognized report type) "+ cd.getURL().getFile() + ": " + lineParts[1]);
-//                }
-//                
-//                i++;
-//            }
-//
-//            scanner.close();
-
 
         } catch (TransformerConfigurationException ex) {
-            r.addException(ex, COMA_OVERVIEW, cd, "Transformer configuration error");
+            r.addException(ex, function, cd, "Transformer configuration error");
         } catch (TransformerException ex) {
-            r.addException(ex, COMA_OVERVIEW, cd, "Transformer error");
+            r.addException(ex, function, cd, "Transformer error");
         } catch (MalformedURLException ex) {
-            r.addException(ex, COMA_OVERVIEW, cd, "Malformed URL error");
+            r.addException(ex, function, cd, "Malformed URL error");
         } catch (IOException ex) {
-            r.addException(ex, COMA_OVERVIEW, cd, "Unknown input/output error");
-        } catch (URISyntaxException ex) {
-            r.addException(ex, COMA_OVERVIEW, cd, "Unknown URI syntax error");
+            r.addException(ex, function, cd, "Unknown input/output error");
+        } catch (ParserConfigurationException ex) {
+            r.addException(ex, function, cd, "Unknown Parser error");
+        } catch (SAXException ex) {
+            r.addException(ex, function, cd, "Unknown XML error");
+        } catch (XPathExpressionException ex) {
+            r.addException(ex, function, cd, "Unknown XPath error");
         }
         
         return r;
@@ -137,6 +100,30 @@ public class ComaOverviewGeneration extends Checker implements CorpusFunction {
             report.addException(ex, "Usable class not found.");
         }
             return IsUsableFor;
+    }
+
+    /**Default function which returns a two/three line description of what 
+     * this class is about.
+     */
+    @Override
+    public String getDescription() {
+        String description = "This class creates a sort- and filterable html overview in table form "
+                + " of the content of the coma file to make error checking and harmonizing easier. ";
+        return description;
+    }
+    
+     public void setInel() {
+            inel = true;
+    }
+
+    @Override
+    public Report check(Corpus c) {
+        throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
+    }
+
+    @Override
+    public Report function(CorpusData cd, Boolean fix) throws SAXException, IOException, ParserConfigurationException, JexmaraldaException, TransformerException, XPathExpressionException {
+        throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
     }
 
 }
